Fixing overflow issue on the group page

--- a/style.css
+++ b/style.css
@@ -92,6 +92,10 @@
 	padding-bottom: 3px;
 }
 
+.type-groups .archive-avatar {
+	margin-left: 5px;
+}
+
 .alerts {
 	font-size: 14px;
 	position: relative;
